--- a/src/styles.css
+++ b/src/styles.css
@@ -181,9 +181,10 @@ img {
 };
 
 
-/*
-* Стили компонента Buton (Load more)
-*/
+
+/* * Стили компонента Buton (Load more)
+*/ 
+
 .Button {
   padding: 8px 16px;
   border-radius: 2px;
@@ -203,9 +204,11 @@ img {
   min-width: 180px;
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-}
+} 
 
 .Button:hover,
 .Button:focus {
   background-color: #303f9f;
 }
+
+
